--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bitgo/utxo-lib",
-  "version": "1.9.1",
+  "name": "blazepool-utxo-lib",
+  "version": "1.0.0",
   "description": "Client-side Bitcoin JavaScript library",
   "main": "./src/index.js",
   "engines": {
@@ -27,7 +27,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/BitGo/bitgo-utxo-lib.git"
+    "url": "https://github.com/blazegeek/blazepool-utxo-lib.git"
   },
   "files": [
     "src"
